Use new system to get current time

--- a/data/index.html
+++ b/data/index.html
@@ -257,6 +257,16 @@
                                                             </div>
                                                             <div class="row">
                                                                 <div class="col col-sm-12">
+                                                                    new_curr_seconds_since_midnight {{NEW_CURR_SECONDS}}
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col col-sm-12">
+                                                                    new_prev_seconds_since_midnight {{NEW_PREV_SECONDS}}
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col col-sm-12">
                                                                     mac address {{MAC_ADDRESS}}
                                                                 </div>
                                                             </div>
